# srm-evolution

./: README.md  config.toml  evolve.py  evolve.sh  full-cp-sounding-rocket.py  full-star-sounding-rocket.py  mo-evolution.py  problems.py  produce-series.sh  pyproject.toml  so-evolution.py  test.py  tools.py
